[workspace]
members = ["qurious", "sqlparser"]
resolver = "2"


[workspace.package]
authors = ["Longshan Lu"]
description = "Qurious"
homepage = "https://github.com/holicc/qurious"
license = "CC BY-SA 4.0"
readme = "README.md"
repository = "https://github.com/holicc/qurious"
rust-version = "1.79"
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
sqlparser = { path = "sqlparser" }
parquet = "52.0.0"
arrow = "52.0.0"
url = "2.5.0"
log = "^0.4"
dashmap = "6.0.1"
connectorx = { git = "https://github.com/holicc/connector-x.git" }


[workspace.lints.rust]
unused_imports = "deny"
