[package]
name = "qurious"
version = "0.1.0"
edition = "2021"


[dependencies]
sqlparser = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
url = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
itertools = "0.13.0"



[dev-dependencies]
arrow = { workspace = true, features = ["prettyprint", "test_utils"] }
async-trait = "0.1.81"
env_logger = "0.11.5"
sqllogictest = "0.22.0"
rayon = { version = "1.10.0" }


[[test]]
harness = false
name = "sqllogictests"
path = "tests/sqllogictests.rs"
