[package]
name = "server"
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = []
postgresql = ["dep:pgwire", "dep:chrono"]

[dependencies]
# postgres
pgwire = { version = "0.23.0", optional = true }
chrono = { version = "0.4.38", optional = true }


[lints]
workspace = true
